[gd_scene load_steps=4 format=3 uid="uid://d032m8q60rla5"]

[ext_resource type="Script" uid="uid://baitr633ii1sy" path="res://scenes/wnd_tagger.gd" id="1_o0v66"]
[ext_resource type="Theme" uid="uid://dyoqwqakkfsn2" path="res://scenes/style_menu.tres" id="2_vvc55"]
[ext_resource type="PackedScene" uid="uid://cevdurwvkkp2r" path="res://scenes/Tag.tscn" id="3_vvc55"]

[node name="WndTagger" type="Window"]
oversampling_override = 1.0
title = "Tagger"
position = Vector2i(200, 100)
size = Vector2i(400, 400)
script = ExtResource("1_o0v66")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vvc55")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="lb_image" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Image"

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Assigned Tags"

[node name="Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Unassigned Tags"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="tags_assigned" type="FlowContainer" parent="Panel/MarginContainer/VBoxContainer/GridContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer/ScrollContainer/tags_assigned"]
layout_mode = 2
text = "Tag 1"

[node name="Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer/ScrollContainer/tags_assigned"]
layout_mode = 2
text = "Tag 2"

[node name="Label3" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer/ScrollContainer/tags_assigned"]
layout_mode = 2
text = "Tag 2"

[node name="Label4" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer/ScrollContainer/tags_assigned"]
layout_mode = 2
text = "Tag 2"

[node name="Label5" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer/ScrollContainer/tags_assigned"]
layout_mode = 2
text = "Tag 2"

[node name="ScrollContainer2" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="tags_unassigned" type="FlowContainer" parent="Panel/MarginContainer/VBoxContainer/GridContainer/ScrollContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer/ScrollContainer2/tags_unassigned"]
layout_mode = 2
text = "Tag 1"

[node name="Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer/ScrollContainer2/tags_unassigned"]
layout_mode = 2
text = "Tag 2"

[node name="Label3" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer/ScrollContainer2/tags_unassigned"]
layout_mode = 2
text = "Tag 2"

[node name="Label4" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer/ScrollContainer2/tags_unassigned"]
layout_mode = 2
text = "Tag 2"

[node name="Label5" type="Label" parent="Panel/MarginContainer/VBoxContainer/GridContainer/ScrollContainer2/tags_unassigned"]
layout_mode = 2
text = "Tag 2"

[node name="Tag" parent="Panel/MarginContainer/VBoxContainer/GridContainer/ScrollContainer2/tags_unassigned" instance=ExtResource("3_vvc55")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="bt_ok" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Save"

[node name="bt_cancle" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Revert"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/bt_ok" to="." method="_on_bt_ok_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/bt_cancle" to="." method="_on_bt_cancle_pressed"]
